<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:paddingLeft="5dip"
	android:paddingRight="5dip"
	android:paddingTop="13dip"
	android:paddingBottom="5dip"
	style="@style/outerText" >

	<LinearLayout 
	    android:orientation="vertical" 
		android:layout_height="wrap_content"
		android:layout_width="fill_parent" 
		android:paddingBottom="5dip" 
		android:paddingTop="5dip"
		android:paddingLeft="5dip" 
		android:paddingRight="5dip"
		android:background="@drawable/rounded_shape" >
		
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="vertical" >
            <CheckBox android:id="@+id/dbadmin_timestamp_checkBox"
	            android:text="@string/dbadmin_timestamp_checkBox" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/innerTextBold" />
		    <Button
		        android:id="@+id/dbadmin_backup_button"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/dbadmin_backup_button" />
		</LinearLayout>			        	        
	    	    
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="1dip"
		    android:layout_marginBottom="8dip"
		    android:layout_marginTop="8dip"
		    android:background="#888888" />

		<TableLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:stretchColumns="1" >
	        <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
				<TextView
		            android:text="@string/dbadmin_backup_dir_textView"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingTop="3dip"
		            android:paddingLeft="5dip"
		            android:paddingRight="10dip"
		            style="@style/innerTextBold" />
		        <TextView
		            android:id="@+id/dbadmin_backup_dir_textView"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" 
		            style="@android:style/Widget.EditText" />
	        </TableRow>
	        <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	            <TextView
		            android:text="@string/dbadmin_backup_file_textView" 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
		            android:paddingLeft="5dip"
		            android:paddingRight="10dip"
					style="@style/innerTextBold" />
		        <Spinner android:id="@+id/dbadmin_backup_spinner"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" />
	        </TableRow>
	    </TableLayout>
		<TableLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
	        android:layout_marginTop="5dip"
		    android:stretchColumns="*" >
	        <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
			    <Button
			        android:id="@+id/dbadmin_restore_button"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/dbadmin_restore_button" />
			    <Button
			        android:id="@+id/dbadmin_reset_button"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/dbadmin_reset_button" />
	        </TableRow>
	    </TableLayout>
	</LinearLayout>		
</FrameLayout>
