<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
	android:id="@+id/activities_scrollView"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:scrollbars="none"
    android:fillViewport="true"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
		android:paddingLeft="5dip"
		android:paddingRight="5dip"
		android:paddingTop="5dip"
		android:paddingBottom="5dip"
	    style="@style/outerText" >
		
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
			android:paddingLeft="5dip"
			android:paddingRight="5dip" >
	
            <TextView
	            android:text="@string/activities_activity_textView" 
                android:layout_width="75dip"
                android:layout_height="wrap_content"
				android:paddingLeft="5dip"
				android:paddingRight="10dip"
				style="@style/outerText" />
	        <Spinner android:id="@+id/activities_activity_spinner"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	    </LinearLayout>

		<LinearLayout 
	        android:orientation="vertical" 
			android:layout_height="wrap_content"
			android:layout_width="fill_parent" 
			android:paddingBottom="5dip" 
			android:paddingTop="5dip"
			android:paddingLeft="5dip" 
			android:paddingRight="5dip"
			android:background="@drawable/rounded_shape" >
	    
	   		<TableLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:stretchColumns="1" 
				android:paddingLeft="5dip"
				android:paddingRight="0dip" >
	
		        <TableRow
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" >
		            <TextView
			            android:text="@string/activities_activity_name_textView" 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
						android:paddingRight="10dip"
						style="@style/innerTextBold" />
			        <EditText android:id="@+id/activities_activity_name_editText"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" />
		        </TableRow>
		        <TableRow
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" >
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content" />
		            <CheckBox android:id="@+id/activities_activity_invisible_checkBox"
			            android:text="@string/activities_activity_invisible_checkBox" 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                style="@style/innerTextBold" />
				</TableRow>
			</TableLayout>
			<TableLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
		        android:layout_marginTop="5dip"
			    android:stretchColumns="*" >
		        <TableRow
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" >
					<Button android:id="@+id/activities_activity_save_button"
			            android:text="@string/activities_activity_save_button" 
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content" />
		
					<Button android:id="@+id/activities_activity_delete_button"
			            android:text="@string/activities_activity_delete_button" 
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content" />
		        </TableRow>
		    </TableLayout>
		</LinearLayout>
				
		<TextView android:id="@+id/activities_separator_textView"
		    android:layout_width="fill_parent"
		    android:layout_height="1dip"
		    android:layout_marginBottom="8dip"
		    android:layout_marginTop="8dip"
		    android:background="#888888" />
		
	    <LinearLayout android:id="@+id/activities_attribute1_linearLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
			android:paddingLeft="5dip"
			android:paddingRight="5dip" >

            <TextView
	            android:text="@string/activities_attribute_textView" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:paddingRight="10dip" 
				style="@style/outerText" />
	        <Spinner android:id="@+id/activities_attribute_spinner"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	    </LinearLayout>

		<LinearLayout android:id="@+id/activities_attribute2_linearLayout"
	        android:orientation="vertical" 
			android:layout_height="wrap_content"
			android:layout_width="fill_parent" 
			android:paddingBottom="5dip" 
			android:paddingTop="5dip"
			android:paddingLeft="5dip" 
			android:paddingRight="5dip"
			android:background="@drawable/rounded_shape" >
		    
			<TableLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
				android:paddingLeft="5dip" 
				android:paddingRight="0dip"
			    android:stretchColumns="1" >
		
		        <TableRow
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" >
		            <TextView
			            android:text="@string/activities_attribute_name_textView" 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
						android:paddingRight="10dip"
						style="@style/innerTextBold" />
			        <EditText android:id="@+id/activities_attribute_name_editText"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" />
		        </TableRow>
		        <TableRow
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" >
		            <TextView
			            android:text="@string/activities_attribute_type_textView" 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
						android:paddingRight="10dip"
						style="@style/innerTextBold" />
			        <Spinner android:id="@+id/activities_attribute_type_spinner"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content" />
		        </TableRow>
		        <TableRow
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" >
		            <TextView
			            android:text="@string/activities_attribute_default_textView" 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
						android:paddingRight="10dip"
						style="@style/innerTextBold" />
			        <EditText android:id="@+id/activities_attribute_default_editText"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" />
		        </TableRow>
		        <TableRow
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" >
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content" />
		            <CheckBox android:id="@+id/activities_attribute_invisible_checkBox"
		                android:text="@string/activities_attribute_invisible_checkBox"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                style="@style/innerTextBold" />
				</TableRow>
			</TableLayout>
	
			<TableLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
		        android:layout_marginTop="5dip"
				android:paddingLeft="5dip" 
				android:paddingRight="0dip"
			    android:stretchColumns="*" >
		        <TableRow
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" >
					<Button android:id="@+id/activities_attribute_save_button"
			            android:text="@string/activities_attribute_save_button" 
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content" />
					<Button android:id="@+id/activities_attribute_delete_button"
			            android:text="@string/activities_attribute_delete_button" 
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content" />
		        </TableRow>
		    </TableLayout>

		</LinearLayout>
	    	    
	</LinearLayout>

</ScrollView>