<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:paddingLeft="5dip"
	android:paddingRight="5dip"
	android:paddingTop="13dip"
	android:paddingBottom="5dip"
	style="@style/outerText" >

	<LinearLayout 
	    android:orientation="vertical" 
		android:layout_height="wrap_content"
		android:layout_width="fill_parent" 
		android:paddingBottom="5dip" 
		android:paddingTop="5dip"
		android:paddingLeft="5dip" 
		android:paddingRight="5dip"
		android:background="@drawable/rounded_shape" >
	    
		<TableLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:stretchColumns="1" >

	        <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
				<TextView
		            android:text="@string/statistics_date_from_textView"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingTop="3dip"
		            android:paddingLeft="5dip"
		            android:paddingRight="10dip"
		            style="@style/innerTextBold" />
		        <TextView
		            android:id="@+id/statistics_date_from_textView"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" 
		            style="@android:style/Widget.EditText" />
	        </TableRow>
	        <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	            <TextView
		            android:text="@string/statistics_date_to_textView" 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
		            android:paddingLeft="5dip"
		            android:paddingRight="10dip"
					style="@style/innerTextBold" />
	            <TextView android:id="@+id/statistics_date_to_textView"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" 
	                style="@android:style/Widget.EditText" />
	        </TableRow>
	        <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	            <TextView
		            android:text="@string/statistics_acivity_textView" 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
		            android:paddingLeft="5dip"
		            android:paddingRight="10dip"
					style="@style/innerTextBold" />
		        <Spinner android:id="@+id/statistics_activity_spinner"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" />
	        </TableRow>
	        <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	            <TextView
		            android:text="@string/statistics_attribute_textView" 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
		            android:paddingLeft="5dip"
		            android:paddingRight="10dip"
					style="@style/innerTextBold" />
		        <Spinner android:id="@+id/statistics_attribute_spinner"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" />
	        </TableRow>
	    </TableLayout>
	
		<TableLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
	        android:layout_marginTop="5dip"
		    android:stretchColumns="*" >
	        
	        <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
				<Button android:id="@+id/statistics_table_button"
		            android:text="@string/statistics_table_button" 
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" />
				<Button android:id="@+id/statistics_chart_button"
		            android:text="@string/statistics_chart_button" 
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" />
	        </TableRow>
	    </TableLayout>
	</LinearLayout>		
</FrameLayout>

