<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
	android:paddingLeft="5dip"
	android:paddingRight="5dip"
	android:paddingTop="5dip"
	android:paddingBottom="5dip"
	style="@style/outerText" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
		android:paddingLeft="5dip"
		android:paddingRight="5dip" >

        <TextView
            android:text="@string/logging_activity_textView" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:paddingLeft="5dip"
			android:paddingRight="10dip"
			style="@style/outerText" />

        <Spinner
            android:id="@+id/logging_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

	<ScrollView 
		android:id="@+id/logging_scrollView"
	    android:layout_height="fill_parent"
	    android:layout_width="fill_parent"
	    android:scrollbars="none"
	    android:fillViewport="false">
	    
		<FrameLayout 
			android:layout_height="wrap_content"
			android:layout_width="fill_parent" 
			android:paddingLeft="5dip" 
			android:paddingRight="5dip"
			android:paddingTop="5dip"
			android:paddingBottom="5dip" 
			android:background="@drawable/rounded_shape" >
	    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" >
		        			    	    	    
		        <TableLayout
		            android:id="@+id/logging_tableLayout"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
					android:paddingLeft="5dip" 
					android:paddingRight="0dip"
		            android:stretchColumns="1" >
		            <TableRow
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content" >
				        <TextView
				            android:text="@string/logging_date_textView" 
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
							android:paddingRight="10dip"
							style="@style/innerTextBold" />
				        <TextView
				            android:id="@+id/logging_date_textView"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            style="@android:style/Widget.EditText" />
		            </TableRow>
				</TableLayout>
		        
		        <Button
		            android:text="@string/logging_log_button" 
		            android:id="@+id/logging_save_button"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="8dip" />
		    </LinearLayout>
		
		</FrameLayout>

	</ScrollView>

</LinearLayout>